<resources>
    <string name="app_name">Login</string>
    <string name="Sukhra">Sukhra</string>
    <string name="livraison"> Livraison à Domicile</string>
    <string name="username"> Nom d\'utilisateur : </string>
    <string name="password"> Mot de passe : </string>
    <string name="cpassword">Confirmer le mot de passe : </string>
    <string name="nom"> Nom : </string>
    <string name="nomcomplet">Nom complet : </string>
    <string name="prénom"> Prénom : </string>
    <string name="adresse"> Adresse : </string>
    <string name="numéro"> Numéro de téléphone : </string>
    <string name="connecter"> Se connecter </string>
    <string name="inscrire"> S\'inscrire </string>
    <string name="connexion"> Connexion </string>
    <string name="inscription"> Inscription </string>
    <string name="error_username">Le nom d\'utilisateur n\'est pas valide </string>
    <string name="error_first_name">Le prénom n\'est pas valide</string>
    <string name="error_last_name">أLe nom n\'est pas valide</string>
    <string name="error_message_password">Le mot de passe n\'est pas valide</string>
    <string name="error_phone">أLe numéro de téléphone n\'est pas valide</string>
    <string name="error_adresse">أL\'adresse n\'est pas valide</string>
    <string name="success_message">inscription réussie</string>
    <string name="error_message">Les informations sont incorrectes</string>
    <string name="error_essaie">Veuillez réessayer</string>
    <string name="error_compte_exists">Ce compte existe déjà</string>
    <string name="error_password">Le mot de passe doit contenir au moins 8 caractères</string>
    <string name="error_password_match">Les mots de passe ne correspondent pas</string>
    <string name="error_valid_user_password">Nom d\'utilisateur ou mot de passe invalide</string>

    <string name="Profil">PROFIL</string>
    <string name="Panier">PANIER</string>
    <string name="Catégories">CATEGORIES</string>
    <string name="Commandes_en_attente">COMMANDES EN ATTENTE</string>
    <string name="Réclamation">RECLAMATION</string>
    <string name="Déconnexion">DECONNEXION</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>


</resources>