<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connexion_Activity"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    android:id="@+id/linearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        >

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="150dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/white"
            android:transitionName="trans_img"/>
        <TextView
            android:id="@+id/text_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kalam_bold"
            android:text="@string/Sukhra"
            android:layout_gravity="center"
            android:textColor="@color/beige"
            android:textSize="30sp"
            android:transitionName="trans_logo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/trans_white"
            android:paddingTop="10dp"
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.45">
                <Button
                    android:id="@+id/btn_conx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connexion"
                    android:background="@android:color/transparent"
                    android:textAllCaps="true"
                    android:textColor="@color/bleu"
                    android:textSize="20sp"
                    android:transitionName="trans_conx">

                </Button>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/orange_"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"></LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/beige"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="0."></LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.45">
                <Button
                    android:id="@+id/btn_incription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inscription"
                    android:background="@android:color/transparent"
                    android:textAllCaps="true"
                    android:textColor="@color/bleu"
                    android:alpha="0.5"
                    android:textSize="20sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/orange_"
                    android:alpha="0.5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"></LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/beige"
            >
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:id="@+id/l_conx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="30dp"
                        >

                        <TextView
                            android:id="@+id/t_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/username"
                            android:textColor="@color/gris"
                            android:textSize="18sp"
                            />


                        <EditText
                            android:id="@+id/e_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_below="@+id/t_username"
                            android:drawableRight="@drawable/ic_person"
                            android:textColor="@color/gris"
                            android:textSize="18sp"
                            android:inputType="text" />

                        <TextView
                            android:id="@+id/t_pwd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/password"
                            android:textColor="@color/gris"
                            android:textSize="18sp"
                            android:layout_below="@+id/e_username"/>

                        <EditText
                            android:id="@+id/e_pwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_below="@+id/t_pwd"
                            android:drawableRight="@drawable/ic_lock"
                            android:textColor="@color/gris"
                            android:textSize="18sp"
                            android:inputType="textPassword" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </ScrollView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/white_trans"
            android:paddingBottom="10dp"
            android:layout_marginTop="-20dp"
            >

            <Button
                android:id="@+id/btn_connecter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:background="@drawable/bleu_orange"
                android:gravity="center"
                android:text="@string/connecter"
                android:textAllCaps="false"
                android:textColor="@color/beige"
                android:textSize="24sp"
                android:transitionName="trans_desc"

                />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>